--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <cite class="author"></cite>
         </blockquote>
         <div class="buttons">
-            <a class="button" id="tweet-quote" title="Tweet this quote!" target="_blank">
+            <a class="button tweet-quote" title="Tweet this quote!" target="_blank">
                 <i class="fa fa-twitter"></i>
             </a>
-            <button class="button" id="new-quote">New quote</button>
+            <button class="button new-quote">New quote</button>
         </div>
     </div>
     <script src="jquery.min.js"></script>
